tests/fixtures/invalid/bool_in_str.py
# Cannot use 'in' with Bool and Str
x: bool = True in "hello"
